--- a/code/index.html
+++ b/code/index.html
@@ -89,7 +89,7 @@
             </form>
         </div>
         <div id="camera">
-            <img id="cameraFeed" src="http://192.168.10.1:8080/stream" alt="Flux de la caméra">
+            <!-- <img id="cameraFeed" src="http://192.168.10.1:8080/stream" alt="Flux de la caméra"> -->
         </div>
     </main>
     <script>
@@ -98,7 +98,7 @@
             cameraFeed.src = `http://192.168.10.1:8080/stream?${new Date().getTime()}`;
         }
 
-        setInterval(refreshCameraFeed, 1000); // Actualiser toutes les secondes
+        // setInterval(refreshCameraFeed, 1000); // Actualiser toutes les secondes
     </script>
 </body>
 
