--- a/code/index.html
+++ b/code/index.html
@@ -89,16 +89,16 @@
             </form>
         </div>
         <div id="camera">
-            <!-- <img id="cameraFeed" src="http://192.168.10.1:8080/stream" alt="Flux de la caméra"> -->
+            <video id="cameraFeed" src="http://10.5.57.116:8494/stream" alt="Flux de la caméra">
         </div>
     </main>
     <script>
         function refreshCameraFeed() {
             const cameraFeed = document.getElementById('cameraFeed');
-            cameraFeed.src = `http://192.168.10.1:8080/stream?${new Date().getTime()}`;
+            cameraFeed.src = `http://10.5.57.116:8494/stream?${new Date().getTime()}`;
         }
 
-        // setInterval(refreshCameraFeed, 1000); // Actualiser toutes les secondes
+        setInterval(refreshCameraFeed, 1000); // Actualiser toutes les secondes
     </script>
 </body>
 
